<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarSocioActivity"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="86dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo_description"
        android:src="@mipmap/icono_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/appTitleGym"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/registrarSocio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/registrar_socio_title"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@+id/registrarSocio"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">



        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#B6AFAF"
        android:autofillHints="name" />

        <EditText
            android:id="@+id/editTextApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_apellido"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#B6AFAF"
            android:autofillHints="familyName" />

        <TextView
            android:id="@+id/textViewGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/genero"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/radioButtonMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="16dp"/>

            <RadioButton
                android:id="@+id/radioButtonFemenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femenino"
                android:textColor="#FFFFFF" />
        </RadioGroup>

        <EditText
            android:id="@+id/editTextEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_edad"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="#B6AFAF"
            android:autofillHints="age" />

        <EditText
            android:id="@+id/editTextDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_dni"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="#B6AFAF"
            android:autofillHints="number" />

        <TextView
            android:id="@+id/textViewAptoFisico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/apto_fisico"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonAdjuntarAptoFisico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/adjuntar_archivo"
            android:textColor="@color/black"
            app:backgroundTint="@color/green_buttons" />

        <TextView
            android:id="@+id/textViewEsSocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/es_socio"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupEsSocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/radioButtonSocioSi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/socio_si"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="16dp"/>

            <RadioButton
                android:id="@+id/radioButtonSocioNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/socio_no"
            android:textColor="#FFFFFF" />
        </RadioGroup>


        <Button
            android:id="@+id/buttonAgregarSocio"
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/agregar_socio"
            android:textColor="@color/black"
        app:backgroundTint="@color/green_buttons" />


        <Button
            android:id="@+id/buttonVolverAtras"
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/volver_atras"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/darker_gray" />


    </LinearLayout>

</ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>