<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="86dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo_description"
        android:src="@mipmap/icono_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/appTitleGym"
        android:textColor="#FFFFFF"
        android:textSize="14sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/menu_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/menu_home"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <Button
        android:id="@+id/registrarSocio"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/registrar_socio"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:backgroundTint="@color/green_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_logo" />

    <Button
        android:id="@+id/cobrarCuota"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cobrar_cuota"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:backgroundTint="@color/green_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrarSocio" />

    <Button
        android:id="@+id/emitirCarnet"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/emitir_carnet"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:backgroundTint="@color/green_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cobrarCuota" />

    <Button
        android:id="@+id/listarSocios"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/listar_socios"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:backgroundTint="@color/green_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emitirCarnet" />

    <Button
        android:id="@+id/hoyVencen"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hoy_vencen"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:backgroundTint="@color/green_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listarSocios" />

    <Button
        android:id="@+id/cerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/cerrar_sesion"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/green_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoyVencen" />

</androidx.constraintlayout.widget.ConstraintLayout>